<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fr.isen.shazamphoto.ui.DetailMonument">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image_text"
            android:src="@drawable/no_picture" />

        <LinearLayout
            android:id="@+id/linearLayoutLike"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"

            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/monument_detail_image_like"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/image_text"
                android:src="@drawable/like" />

            <TextView
                android:id="@+id/monument_textview_like"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_view_like" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFavorite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/monument_image_favourite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/image_text"
                android:src="@drawable/favorite" />

            <TextView
                android:id="@+id/monument_textview_favourite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_view_favorite" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>